2005-09-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie.cc (get_configuration): don't crash if left_dot is NULL.

	* flower/include/real.hh: std::fabs too.

2005-09-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/instrument-notation.itely (Entering lyrics):
	Multiple latin-1->utf-8 conversion fix.

	* Documentation/user/*tely: Update Emacs cookie to utf-8.

2005-09-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/tie.cc (get_configuration): also avoid dots for non-space
	situations.

2005-09-07  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/instrument-notation.itely: Bugfix.

2005-09-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* tex/GNUmakefile: don't install texinfo.tex

	* tex/ : cleanup: remove unused files.

	* lily/general-scheme.cc: remove my_{isinf,isnan}.

	* flower/include/real.hh: using std::{isnan,isinf}
	
	* VERSION (PATCH_LEVEL): release 2.7.9

2005-09-05  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ instrument-notation.itely,
	advanced-notation.itely: minor tweaks.

	* input/test/script-chart.ly: add item padding.

2005-09-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/offset.cc: use math.h iso. <cmath>

	* scm/ps-to-png.scm (make-ps-images): use png16m again, for sake
	of IE users.

	* scm/framework-eps.scm (dump-stencils-as-EPSes): cleanup.
	(widen-left-stencil-edges): new function. Fix alignment problems
	with LaTeX includegraphics.

	* lily/text-interface.cc (interpret_markup): use abort().

2005-09-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/tie-chord.ly (testLong): add a chord in 4ths

	* lily/tie.cc (get_configuration): update bezier shape as we
	change Y positions.
	(get_configuration): don't move large ties if we're outside of the
	staff.

2005-09-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-markup-commands.scm (strut): swap X and Y dims.
	
2005-09-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* .cvsignore: Add auto-generated configure files and then some.
