@@ -1,3 +1,8 @@
+2005-09-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/tie-column.cc (set_chord_outlines): bugfix: insert complete
+	box in skyline.
+
 2005-09-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/tie.cc (get_configuration): don't crash if left_dot is NULL.
